--- a/Index.html
+++ b/Index.html
@@ -11,16 +11,18 @@
         <h1>TransLogística</h1>
         <nav>
             <ul>
-                <li><a href="#servicos">Serviços</a></li>
                 <li><a href="#sobre">Sobre Nós</a></li>
+                <li><a href="#servicos">Serviços</a></li>
                 <li><a href="#contato">Contato</a></li>
+                <li><a href="#testemunhos">Depoimentos</a></li>
+                <li><a href="#localizacao">Localização</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="sobre">
         <h2>Sobre Nós</h2>
-        <p>Somos a TransLogística, a sua transportadora confiável. Nossa missão é proporcionar soluções de transporte seguras e eficientes, atendendo às necessidades dos nossos clientes.</p>
+        <p>Na TransLogística, oferecemos soluções de transporte seguras e eficientes, adaptadas às necessidades de nossos clientes. Com uma equipe experiente e veículos modernos, garantimos a entrega de sua carga com excelência.</p>
     </section>
 
     <section id="servicos">
@@ -34,9 +36,26 @@
         </ul>
     </section>
 
+    <section id="testemunhos">
+        <h2>Depoimentos de Clientes</h2>
+        <blockquote>
+            <p>"A TransLogística sempre entrega no prazo! Recomendo!" - Cliente A</p>
+        </blockquote>
+        <blockquote>
+            <p>"Excelente atendimento e serviços de qualidade!" - Cliente B</p>
+        </blockquote>
+    </section>
+
+    <section id="localizacao">
+        <h2>Localização</h2>
+        <p>Estamos localizados em Itajaí, SC. Para mais informações, entre em contato conosco.</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3434.024797834537!2d-46.62334378531914!3d-26.90703428345567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8b64c41895a63%3A0x9c3429633a1a6a2!2sItaja%C3%AD%2C%20SC!5e0!3m2!1spt-BR!2sbr!4v1633485359072!5m2!1spt-BR!2sbr" 
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </section>
+
     <section id="contato">
         <h2>Contato</h2>
-        <p>Entre em contato conosco:</p>
+        <p>Entre em contato conosco preenchendo o formulário abaixo:</p>
         <form id="contact-form">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
